<resources>
    <string name="app_name">ProjetoMobile</string>
    <string name="pokemon_name">Pokemon name</string>
    <string name="btn_Pokedex">Pokedex</string>
    <string name="avan_ar">Avançar</string>
    <string name="voltar">Voltar</string>
    <string name="uma_pokedex">É uma Pokedex</string>
    <string name="imagem_do_pokemon">Imagem do Pokemon</string>
    <string name="ask_localização">Quer descobrir sua localização? Aperte no botão</string>
    <string name="localiza_o">Localização</string>
    <string name="txtInfo">Somente perte nesse botão para ver sua localização no Maps DEPOIS que os
        textos acima se tornarem números</string>
    <string name="pegar_localiza_o">Pegar localização</string>
    <string name="maps">Maps</string>
    <string name="longetude">Longetude</string>
    <string name="latitude">Latitude</string>
    <string name="placeholder_pokename">Missigno</string>
    <string name="nav_home">Home</string>
    <string name="nav_localizacao">Minha localização</string>
    <string name="nav_pokedex">Pokédex</string>
    <string name="nav_referencias">Referências</string>
    <string name="nav_logout">Sair</string>
    <string name="logo">Logo</string>
    <string name="open_nav">open_nav</string>
    <string name="close_nav">close_nav</string>
    <string name="emailContato">Contato: mastery@alu.ufc.br</string>
    <string name="armazenar_pok_mon">Armazenar Pokémon</string>
    <string name="controle_da_m_sica">Tocar música</string>
    <string name="broadcastOn">Modo avião está ligado!</string>
    <string name="broadcastOff">Modo avião está desligado!</string>
    <string name="digite_o_nome_do_pok_mon">Digite o nome do Pokémon</string>
    <string name="digite_o_tipo_1_do_pok_mon">Digite o tipo 1 do Pokémon</string>
    <string name="digite_o_tipo_2_do_pok_mon_se_tiver">Digite o tipo 2 do Pokémon (se tiver)</string>
    <string name="enviar">Enviar</string>
    <string name="conferir">Conferir</string>
    <string name="refer_ncias">Referências</string>
    <string name="abrir">Abrir</string>
    <string name="api_da_pok_dex">API da Pokédex</string>
    <string name="uso_do_sensor_do_gps">Uso do sensor do GPS</string>
    <string name="formata_o_do_pokename">Formatação do PokeName</string>
    <string name="navega_o_com_fragment">Navegação com Fragment</string>
    <string name="migra_o_de_c_digo_e_sevice">Migração de código e service</string>
    <string name="broadcastreceiver">BroadcastReceiver</string>
</resources>