<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location"
            android:title="@string/nav_localizacao"/>
        <item
            android:id="@+id/nav_pokedex"
            android:icon="@drawable/ic_pokedex"
            android:title="@string/nav_pokedex"/>
        <item
            android:id="@+id/nav_db"
            android:icon="@drawable/ic_db"
            android:title="@string/armazenar_pok_mon"/>
        <item
            android:id="@+id/nav_referencias"
            android:icon="@drawable/ic_referencia"
            android:title="@string/nav_referencias"/>

    </group>

    <item
        android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app"
                android:title="@string/nav_logout"/>
        </menu>
    </item>

</menu>