<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ask_localização"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/btn_gps"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="0dp"
            android:paddingBottom="3dp"
            android:text="@string/pegar_localiza_o"
            android:textColor="@color/white"
            android:background="@color/blue"
            app:layout_constraintTop_toBottomOf="@id/titulo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/btn_localizacaoWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:paddingTop="0dp"
            android:paddingBottom="3dp"
            android:text="@string/maps"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


        <TextView
            android:id="@+id/txtInfo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/txtInfo"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@id/btn_localizacaoWeb"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/txtLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@id/txtLongitude"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/txtLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longetude"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@id/txtInfo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>