<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@color/blue"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo_background"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/circle_background"
            app:layout_constraintBottom_toBottomOf="@id/logo_background"
            app:layout_constraintLeft_toLeftOf="@id/logo_background"
            app:layout_constraintRight_toRightOf="@id/logo_background"
            app:layout_constraintTop_toTopOf="@id/logo_background"/>

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toBottomOf="@id/logo_background"
            app:layout_constraintLeft_toLeftOf="@id/logo_background"
            app:layout_constraintRight_toRightOf="@id/logo_background"
            app:layout_constraintTop_toTopOf="@id/logo_background" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailContato"
        android:textColor="@color/white"
        android:textStyle="bold"/>

</LinearLayout>